For 1.19.5:
	- more plugin work on Linux and OS X.

For 1.19.4:
	- Compile changes to allow rpms to be built and distributed for Fedora Core 6;

	- AMD64 browser plugin now compiled by default;

	- Plugin code changed to better locate initial URL;

	- OS X Console work, and plugin work to better handle multiple invocations of FreeWRL.

	- XML parser has had a bit of Javascript coding changes. More required, for non-CDATA
	  script text.

	- Classic parser now looks to see if a Javascript URL is a file name - if it is, it loads the file.

	- Javascript functions that returned strings, were not concatable. This
	  was caused by returning a trailing NULL character (as is usually the case with C strings).
	  This NULL was removed, and eg: print ('the ' + getName() + ' Browser works now');

For 1.19.3:
	- OS X - console messages improved.

	- Makefile.PL - .rpm and .deb package makes updated.

	- add Seamonkey and Firefox as possible browsers in Makefile.PL

	- Classic VRML parser has improved in it's use of Scripts within PROTOs.

	- Linux Plugin code reworked - had problems looking up correct urls for textures, inlines
	  and anchors. Should be better.

	- re-ordered routing field lookups for nodes with both field and eventIn names "same".

	- Java/ecmascript:
	 	- fixes and tests for most MF* nodes.
		- addRoute / deleteRoute now works with new parser formats.
		- replaceWorld() works with new parsers.
		- createVrmlFromString() verified.
		- getName() verified.
		- getVersion() verified.
		- getCurrentSpeed() verified.
		- getCurrentFrameRate() verified.
		- getWorldURL() verified.
		- loadURL() verified.
		- createVrmlFromUrl() verified.

	- ReWire/Midi:
		- added following Javascript functions:
			getMidiDeviceList()
			getMidiDeviceInfo(x)
			getMidiControlMin(x,y)
			getMidiControlMax(x,y)
			getMidiControlNumber(x,y)


For 1.19.2:

	- let scripts start with whitespace before the "vrmlscript".
